--- a/gilded-rose-web/src/main/resources/paper-dashboard-react/public/index.html
+++ b/gilded-rose-web/src/main/resources/paper-dashboard-react/public/index.html
@@ -10,7 +10,7 @@
         -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
-        <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png"/>
+<!--        <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png"/>-->
         <!--
             Notice the use of %PUBLIC_URL% in the tags above.
             It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +25,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
 
-        <title>Paper Dashboard React by Creative Tim</title>
+        <title>Info Wuffer</title>
     </head>
     <body>
         <noscript>
